Made the homepage loadable from homepage module

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,9 @@
     <title>Restaurant Page</title>
   </head>
   <body>
+    <img src="../src/restaurant-photo.jpeg" class="home-image" alt="restaurant-homepage-image" >
     <header>
+      <div class="logo">BISTROX</div>
       <nav>
         <button>Home</button>
         <button>Menu</button>
@@ -14,7 +16,6 @@
       </nav>
     </header>
     <div id="content">
-        <img src="../src/restaurant-photo.jpeg" alt="" height="400px" width="400px">
     </div>
   </body>
 </html>
