--- a/src/template.html
+++ b/src/template.html
@@ -10,9 +10,9 @@
     <header>
       <div class="logo">BISTROX</div>
       <nav>
-        <button>Home</button>
-        <button>Menu</button>
-        <button>About</button>
+        <button class="home">Home</button>
+        <button class="menu">Menu</button>
+        <button class="about">About</button>
       </nav>
     </header>
     <div id="content">
